--- a/src/index.html
+++ b/src/index.html
@@ -14,9 +14,9 @@
 	<style>#str-dlls { display: none }</style>
 </head>
 <body>
-	<my-app>
+	<ion-app>
 		Loading...
-	</my-app>
+	</ion-app>
 	<script type="text/javascript" src="hammer.min.js"></script>
 	<script src="https://cdn.polyfill.io/v2/polyfill.min.js?features=console.*,Intl.~locale.en&gated=1"></script>
 	<div id="str-dlls">
