--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
 	<link rel="stylesheet" href="./assets/css/main.css" />
 	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 	<style>#str-dlls { display: none }</style>
+    <script src="cordova.js"></script>
 </head>
 <body>
 	<ion-app>
